# cargo-test-json-2-html

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TASKS.md  generate-example.sh  test-output.json  test-report.html
.github/workflows/: release.yml
examples/: test-report.html
src/: lib.rs  main.rs
templates/: report.hbs
test-data/: basic.json  complex-example.json  error-handling.json  mixed-compilation.json  source-linking.json  xss-protection.json
tests/: integration.rs
tests/snapshots/: integration__error_handling.snap  integration__mixed_output_with_compilation.snap  integration__real_cargo_output.snap  integration__source_linking.snap  integration__xss_protection.snap
