[package]
name = "cargo-test-json-2-html"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = "3.7.2"
clap = { version = "4.5.47", features = ["derive"] }
handlebars = "6.3.2"
html-escape = "0.2.13"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
insta = "1.43.2"
