[package]
name = "cargo-test-json-2-html"
version = "0.1.1"
edition = "2024"
description = "Convert cargo test JSON output to beautiful, self-contained HTML reports"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rcoh/cargo-test-json-2-html"
keywords = ["cargo", "test", "html", "report"]
categories = ["development-tools"]

[dependencies]
bon = "3.7.2"
clap = { version = "4.5.47", features = ["derive"] }
handlebars = "6.3.2"
html-escape = "0.2.13"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
insta = "1.43.2"
proptest = "1.5.0"
